[package]
name = "mucv"
version = "0.1.0"
authors = ["Adam Recvlohe <adam.recvlohe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
